# finwin

./: .gitignore  README.md  environment.yml  gather_context.py  pyproject.toml
examples/: basic_usage.py
finwin/: __init__.py  cli.py  collector.py  utils.py
finwin/actions/: __init__.py  base.py
finwin/agents/: __init__.py  base.py
finwin/cache/: __init__.py  base.py  decorators.py  factory.py  file.py  memory.py
finwin/config/: __init__.py  settings.py
finwin/extractors/: __init__.py  base.py  html.py  pdf.py
finwin/llm/: __init__.py  base.py  factory.py
finwin/llm/providers/: __init__.py
finwin/models/: __init__.py  config.py  context.py  macro.py
finwin/providers/: __init__.py  base.py
finwin/providers/financials/: __init__.py  yfinance.py
finwin/providers/macro/: __init__.py  base.py  worldbank.py
finwin/providers/news/: __init__.py  google.py
finwin/providers/web/: __init__.py  fetcher.py
finwin/server/: __init__.py  main.py
finwin/server/routes/: __init__.py  macro.py
finwin/services/: __init__.py  macro_dashboard.py
finwin/sources/: __init__.py  base.py
finwin/sources/financials/: __init__.py  yfinance.py
finwin/sources/news/: __init__.py  google.py
finwin/sources/web/: __init__.py  fetcher.py
web/: package-lock.json
web/src/: App.css  App.tsx  api.ts  types.ts
web/src/components/: FinancialsCard.tsx  NewsCard.tsx  SearchBar.tsx  SourceResults.tsx
web/src/components/macro/: CountryComparisonChart.tsx  FDIFlowsChart.tsx  MacroDashboard.css  MacroDashboard.tsx  RegionalBreakdown.tsx  TopEconomiesTable.tsx  (+3 more)
